--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./webpack.config.js --env NODE_ENV=development --mode development",
+    "dev": "webpack-dev-server --config ./webpack.config.js --env NODE_ENV=development --mode development",
+    "start": "npm run dev",
     "build": "webpack --mode production --env NODE_ENV=production",
     "deploy": "webpack --mode production --env NODE_ENV=production --env deploy && ./deploy.sh $npm_package_name",
     "watch": "webpack --watch"
@@ -13,26 +14,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^5.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "autoprefixer": "^9.8.8",
-    "babel-loader": "^8.3.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "@babel/preset-react": "^7.22.0",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.0",
     "compression-webpack-plugin": "^10.0.0",
-    "css-loader": "^6.7.3",
-    "cssnano": "^5.1.14",
+    "css-loader": "^6.8.0",
+    "cssnano": "^6.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "node-sass": "^8.0.0",
-    "postcss": "^8.4.21",
-    "postcss-loader": "^7.0.2",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.0",
+    "sass": "^1.69.0",
+    "sass-loader": "^13.3.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.0"
   }
 }
