--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "data_viz_project_template",
+  "name": "testing_static_dv",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
